# vla-tutorial

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  edu_pi0.yaml  grasp.yaml  push.yaml
docs/: EDU_PI0.md
npm/vla-mini/: PUBLISH.md  README.md  package.json
npm/vla-mini/lib/: paths.js  python.js
npm/vla-mini/scripts/: bundle-python.js
scripts/: bootstrap.ps1  run-demo.cmd  run-demo.ps1
src/vla_mini/: __init__.py  demo.py  dry_run.py  eval.py  repl.py  train.py  train_pi0.py
src/vla_mini/data/: __init__.py  synthetic.py
src/vla_mini/env/: __init__.py  action_utils.py  base.py  factory.py  tasks.py  toy_grasp.py  toy_push.py  toy_reach.py
src/vla_mini/model/: __init__.py  action_exec.py  checkpoint.py  vla.py
src/vla_mini/policy/: __init__.py  backends.py  batch.py  configuration.py  constants.py  modeling_edu_pi0.py
tests/: test_checkpoint.py  test_env_expert.py  test_manifest.py
